# lowjs-esp32-esp-idf

./: .gitmodules
components/app_update/: esp_ota_ops.c
components/bootloader_support/src/: bootloader_console.c  esp_image_format.c
components/bootloader_support/src/esp32/: bootloader_esp32.c
components/driver/: can.c  gpio.c  i2c.c  spi_master.c  uart.c
components/driver/include/driver/: can.h  i2c.h
components/esp_common/: Kconfig
components/esp_eth/src/: esp_eth_mac_esp32.c
components/esp_netif/lwip/: esp_netif_lwip.c
components/esp_system/: startup.c
components/fatfs/vfs/: esp_vfs_fat.h  vfs_fat.c  vfs_fat_sdmmc.c  vfs_fat_spiflash.c
components/freertos/: tasks.c
components/heap/: CMakeLists.txt  component.mk  heap_caps.c  heap_caps_init.c  linker.lf  malloc.c  malloc.h  multi_heap.c  multi_heap_internal.h  multi_heap_platform.h  spiram_mmap.c
components/heap/include/: esp_heap_caps.h
components/heap/include/sys/: mman.h
components/heap/test/: test_malloc.c  test_malloc_caps.c  test_realloc.c
components/heap/test_multi_heap_host/: test_multi_heap.cpp
components/lwip/port/esp32/netif/: ethernetif.c  wlanif.c
components/newlib/: pthread.c
components/soc/esp32/: emac_hal.c
components/soc/src/esp32/include/hal/: can_ll.h  twai_ll.h
components/spi_flash/: esp_flash_spi_init.c  flash_mmap.c
components/spi_flash/include/: esp_spi_flash.h
components/vfs/: vfs.c
tools/: tools.json
tools/ci/python_packages/: gitlab_api.py
tools/test_idf_tools/: test_idf_tools.py
